# signalrank

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  precompute.py  pyproject.toml  rank.py  sample_candidates.jsonl  submission.csv  submission_metadata.yaml
artifacts/: cand_ids.json  jd_probe_embeddings.npy
eval/: archetype_report.py  bootstrap_ci.py  bootstrap_ci_report.md  dev_labels.jsonl  impact.py  lexicon_coverage.py  lexicon_coverage_report.md  sensitivity.py  sensitivity_report.md  tune.py  verify_report.md  verify_submission.py
ranker/: __init__.py  behavioral.py  config.py  embeddings.py  features.py  honeypot.py  metrics.py  reasoning.py  score.py  util.py
tests/: test_behavioral.py  test_embeddings.py  test_features.py  test_honeypot.py  test_metrics.py  test_rank_e2e.py  test_reasoning.py  test_score.py  test_util.py
